2008-08-06 Jens Tkotz <jens@peino.de> 1.5.8-svn-b31

 * Fix: Make logout work on Gallery, Album and Photoview.

 * Fix: Adjust addbrackets param to change link functions.

 * New methods:
   - albumDB->isInitialized()

 * New functions:
   - checkRequirements()
   - getAlbumCommands($album, $caption = false, $mainpage = true)
   - jsHTML($path)
   - isValidUrl($url)
   - isSafeHttpHeader($header)
   - gInput(...) !!
   - gReset(..)

 * Change: Some icon changes.

 * Update: All of the great Walter Zorn Js. They have now their own dir.

2008-08-06 Jens Tkotz <jens@peino.de> 1.5.8-svn-b30

 *
 *** SECURITY BUGFIX ****

 + Application Insecurely Discloses Potentially Sensitive Data +

 Portions of the application were discovered that disclose
 sensitive data to application users.


 + CHANGE: Gallery prefers now Netpbm 10.3+ (was 9.9+)

 * CHANGE: Lots of changes in setup/*

 * Removed setup/backup_albums.php

 * Change: Renamed toggle.js tp toggle.js.php

 * New functions:
   - configError()

 * New methods:
   - userDB->isInitialized()

2008-08-06 Jens Tkotz <jens@peino.de> 1.5.8-svn-b29

 *
 **
 *** SECURITY BUGFIX ****

 + Role-Based Authorization Not Adequately Enforced +

 The application determines whether certain functionality is available in 
 the user-interface (UI) based on role/group-membership
 (admin, custom groups, etc) and assigned permissions (i.e. canChangeOwnPw,
 canWriteToAlbum, etc).
 Several components were identified that do not perform adequate server-side
 checks for appropriate role-membership and/or assigned permissions.
 This makes it possible to access functionality not normally available in the
 UI and perform potentially sensitive application-level tasks.


 * New functions:
   - returnToPathArray($album = NULL, $withCurrentAlbum = true,
                       $photoview = false)
   - fs_rmdir($dir)

2008-08-06 Jens Tkotz <jens@peino.de> 1.5.8-svn-b28

 *
 **
 *** SECURITY BUGFIX ****

 + Unauthorized Access to File System +
