@@ -1,3 +1,15 @@
+2008-08-06 Jens Tkotz <jens@peino.de> 1.5.8-svn-b32
+
+ *
+ *** SECURITY BUGFIX ****
+
+ + Inadequate Password Complexity Enforcement + 
+
+ The application does not enforce adequate password complexity requirements 
+ for user passwords.
+
+ + New Password Functionality Susceptible to Brute Force Attacks +
+
 2008-08-06 Jens Tkotz <jens@peino.de> 1.5.8-svn-b31
 
  * Fix: Make logout work on Gallery, Album and Photoview.
